tests/valid/test2_multi_step.tl
// Test 2: Multi-Step Workflow with Dependencies and Conditions
// Tests: Multiple tasks, AFTER dependency, IF success condition

TASK backupDB {
    RUN "backup.sh"
    EVERY DAY AT 02:00
}

TASK sendReport {
    RUN "report.py"
    AFTER backupDB
    IF success
}

TASK cleanup {
    RUN "cleanup.sh"
    EVERY WEEK ON SUNDAY AT 03:00
}
